# centerpoint-ros

./: .gitignore  README.md
src/lidar_centerpoint/: CMakeLists.txt  README.md  package.xml
src/lidar_centerpoint/config/: centerpoint_param.yaml  centerpoint_tiny_param.yaml  detection_class_remapper_param.yaml
src/lidar_centerpoint/include/lidar_centerpoint/: centerpoint_trt.hpp  detection_class_remapper.hpp  node.hpp  ros_utils.hpp  single_inference_node.hpp
src/lidar_centerpoint/include/lidar_centerpoint/ground_segmentation/: FastMorFilter.h
src/lidar_centerpoint/include/lidar_centerpoint/postprocess/: non_maximum_suppression.hpp
src/lidar_centerpoint/include/lidar_centerpoint/preprocess/: pointcloud_densification.hpp  voxel_generator.hpp
src/lidar_centerpoint/launch/: lidar_centerpoint.launch
src/lidar_centerpoint/lib/: centerpoint_trt.cpp  detection_class_remapper.cpp  ros_utils.cpp
src/lidar_centerpoint/lib/ground_segmentation/: FastMorFilter.cpp
src/lidar_centerpoint/lib/network/: network_trt.cpp  tensorrt_wrapper.cpp
src/lidar_centerpoint/lib/postprocess/: non_maximum_suppression.cpp
src/lidar_centerpoint/lib/preprocess/: pointcloud_densification.cpp  voxel_generator.cpp
src/lidar_centerpoint/models/: pts_voxel_encoder_centerpoint_tiny.engine
src/lidar_centerpoint/src/: main.cpp  node.cpp  single_inference_node.cpp
src/object_recognition_utils/: CMakeLists.txt  package.xml
src/object_recognition_utils/include/object_recognition_utils/: geometry.hpp  object_classification.hpp  object_recognition_utils.hpp
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: DetectedObject.msg  DetectedObjectKinematics.msg  DetectedObjects.msg  PredictedObject.msg  PredictedObjectKinematics.msg  PredictedObjects.msg  TrackedObject.msg  TrackedObjectKinematics.msg  TrackedObjects.msg
src/tensorrt_common/: CMakeLists.txt  package.xml
src/tensorrt_common/include/tensorrt_common/: tensorrt_common.hpp
src/tier4_autoware_utils/: CMakeLists.txt  package.xml
src/tier4_autoware_utils/include/tier4_autoware_utils/geometry/: boost_geometry.hpp  boost_polygon_utils.hpp  geometry.hpp
src/tier4_autoware_utils/src/geometry/: boost_polygon_utils.cpp  geometry.cpp
