<?xml version="1.0"?>
<package format="2">
  <name>tier4_autoware_utils</name>
  <version>0.0.0</version>
  <description>The tier4_autoware_utils package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>perception_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>perception_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>perception_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>